# piston-cube

./: .gitignore  Cargo.toml
src/: cube_150.glslf  cube_150.glslv  main.rs
src/model/: cube.rs  cube_150.glslf  mario.rs  mod.rs  obj.rs  scene.rs
src/pipeline/: mod.rs  object.rs  vertex.rs
