[package]
name = "pistoncube"
version = "0.1.0"
authors = ["Adam Szalkowski <adam@szalkowski.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.104.0"
#piston-ai_behavior = "0.31.0"
#piston2d-sprite = "0.58.0"
#piston2d-drag_controller = "0.29.0"
#piston2d-deform_grid = "0.5.0"
find_folder = "0.3.0"
image = "0.22.1"
gfx = "0.17.1"
gfx_core = "0.8.3"
gfx_device_gl = "0.15.0"
cgmath = "0.17.0"
camera_controllers = "0.31.0"
rand = "0.6.0"
shader_version = "0.6.0"
reqwest = "0.9.22"